--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.15.12",
+    "com.unity.collab-proxy": "1.15.13",
     "com.unity.device-simulator": "3.0.3-preview",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.14",
-    "com.unity.ide.vscode": "1.2.4",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.jobs": "0.50.0-preview.8",
     "com.unity.mobile.android-logcat": "1.2.3",
-    "com.unity.mobile.notifications": "1.4.2",
+    "com.unity.mobile.notifications": "2.0.0",
     "com.unity.nuget.newtonsoft-json": "3.0.1",
-    "com.unity.test-framework": "1.1.29",
+    "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
